syntax = "proto3";

//protoc --go_out=. --go-grpc_out=. --go-grpc_opt=paths=source_relative --go_opt=paths=source_relative *.proto

option go_package = "./internal/pkg/description/delivery/grpc";

service DescriptionService {
    rpc GenerateDescription (DescriptionRequest) returns (DescriptionResponse);
}

message DescriptionRequest {
    string first_char_id = 1;
    string second_char_id = 2;
}

message DescriptionResponse {
    string battle_description = 1;
}